samples/_failures_safe/1761701154_43015a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37126a83.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_37126a83.c:153:9: error: expected declaration or statement at end of input
  153 |         token.value[i] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_37126a83.c:153:9: error: expected declaration or statement at end of input
